# store-registry

./: pyproject.toml
core/: settings.py
core/apps/registry/: admin.py  apps.py  models.py
core/apps/registry/fixtures/: day_of_week.json
core/apps/registry/migrations/: 0001_initial.py
